one of the tripe was not correct.

--- a/Wanlaweyn-.mw
+++ b/Wanlaweyn-.mw
@@ -6,7 +6,7 @@ Shanta caleemo waxay ka kooban yahiin:
 *Janbaluul
 * hubeer
 
-*hiifmuge
+*Ealay
 
 Beelaha shancaleemod badankood waxay degaan Degmada dhaxdeeda waloow ay jiraan tiuuloyin badan leeyahiin waxay u badan yahiin dad ganacsada '''''<nowiki/>''''' 
 
