*Empty MediaWiki Message*

--- a/Wanlaweyn-.mw
+++ b/Wanlaweyn-.mw
@@ -4,8 +4,7 @@ Shanta caleemo waxay ka kooban yahiin:
 *Erdh
 * barbaare
 *Janbaluul
-* hubeer
-
+* Ogaden - Xabar gader 
 *Ealay
 
 Beelaha shancaleemod badankood waxay degaan Degmada dhaxdeeda waloow ay jiraan tiuuloyin badan leeyahiin waxay u badan yahiin dad ganacsada '''''<nowiki/>''''' 
