*Empty MediaWiki Message*

--- a/Daarood.mw
+++ b/Daarood.mw
@@ -9,6 +9,7 @@
 |rels = [[Sunni Islam]], [[Suufi]], [[Ghair Muqallidiinta]], [[Jama'atul Muslimin]]
 |related-c = [[Dir]], [[Hawiye]], [[Isaaq]], [[Raxanweyn]] iyo qabiilo [[Soomaali]] kale
 }}
+[[File:Darod jabarti.png|thumb|left|beelaha darod]]
 '''Daarood''' ({{lang-en|Darod}}; {{lang-ar|دارود}}) waa [[beel]] ka mid ah beelaha [[Soomaali]]da kuwaasi oo degan [[Geeska Afrika]]. Beesha Daarood waxaay degtaa wadanka [[Soomaaliya]] [[Jubaland|, Jubaland]] [[Galmudug]] iyo [[Puntland]] wadanka [[Itoobiya]] iyo deegaano ka tirsan wadanka [[Kiinya]].
 Guud ahaan, beesha Daarood waxaa ka farcama reero badan oo ka mid ah [[Mareexaan]]: [[Absame]], Harti ([[Majeerteen]], [[Beesha Darawiish]], [[Dishiishe]] iyo [[Warsangali]])  [[Lailkase]] iyo beelo kale.
 
