--- a/Duduble.mw
+++ b/Duduble.mw
@@ -13,4 +13,4 @@ Siyaasiyiinta xiligaan ee beesha Dududble waxaa ka mid ah: senator Dhageey Geell
 
 Saxafiyiinta caanka ah ee beesha Dududuble waxaa ka mid ah
 
-Cilmi Cismaan Faarax (Boodhari), Axmed Cabdinuur, Cabdulaahi Cismaan Faarax, Cabdiraxmaan Daahir Guutaale Maaliki fardowso maxamed cilmi, Cabdishakuur Faarax Cigale.C/qani Axmed Abtidoon,Zakariye Cabdiraxmaan Daahir (Capital)Abdifitaah Ali Halane (Ciiltire) waxaa kaloo ka mid ah gabartii ugu horeysay ee ka hadasha telifishin soomaaleed ama weriye soomaaliyeed ka hadla TV shukri maxamuud afrax , proff. Najiib xirsi xuseen.
+Cilmi Cismaan Faarax (Boodhari), Axmed Cabdinuur, Cabdulaahi Cismaan Faarax, Cabdiraxmaan Daahir Guutaale Maaliki fardowso maxamed cilmi, Cabdishakuur Faarax Cigale.C/qani Axmed Abtidoon,Zakariye Cabdiraxmaan Daahir (Capital)Abdifitaah Ali Halane (Ciiltire) waxaa kaloo ka mid ah gabartii ugu horeysay ee ka hadasha telifishin soomaaleed ama weriye soomaaliyeed ka hadla TV shukri maxamuud afrax , proff. Najiib xirsi xuseen. Yahye Abdullahi Ahmed(Abtidoon)
