--- a/Duduble.mw
+++ b/Duduble.mw
@@ -11,6 +11,8 @@ Iyo bankiga Salaam bank. garaad nuure taliyihii booliska caasimada mugdisho c/la
 
 Siyaasiyiinta xiligaan ee beesha Dududble waxaa ka mid ah: senator Dhageey Geelle Ugaas, xildhibaan Mohamed Abdulle. Cabdullaahi Faarax Wehliye, Cabadale Caawooley, Axmed Diiriye, Ikraan Absuge oo ah qofkii ugu yar oo noqdo xildhibaan Somaliyeed.
 
+caaqilka ugu da'da yar  Yahye Abdullahi Ahmed(Abtidoon)
+
 Saxafiyiinta caanka ah ee beesha Dududuble waxaa ka mid ah
 
-Cilmi Cismaan Faarax (Boodhari), Axmed Cabdinuur, Cabdulaahi Cismaan Faarax, Cabdiraxmaan Daahir Guutaale Maaliki fardowso maxamed cilmi, Cabdishakuur Faarax Cigale.C/qani Axmed Abtidoon,Zakariye Cabdiraxmaan Daahir (Capital)Abdifitaah Ali Halane (Ciiltire) waxaa kaloo ka mid ah gabartii ugu horeysay ee ka hadasha telifishin soomaaleed ama weriye soomaaliyeed ka hadla TV shukri maxamuud afrax , proff. Najiib xirsi xuseen. Yahye Abdullahi Ahmed(Abtidoon)
+Cilmi Cismaan Faarax (Boodhari), Axmed Cabdinuur, Cabdulaahi Cismaan Faarax, Cabdiraxmaan Daahir Guutaale Maaliki fardowso maxamed cilmi, Cabdishakuur Faarax Cigale.C/qani Axmed Abtidoon,Zakariye Cabdiraxmaan Daahir (Capital)Abdifitaah Ali Halane (Ciiltire) waxaa kaloo ka mid ah gabartii ugu horeysay ee ka hadasha telifishin soomaaleed ama weriye soomaaliyeed ka hadla TV shukri maxamuud afrax , proff. Najiib xirsi xuseen.
