*Empty MediaWiki Message*

--- a/Shirkad-Trafigura.mw
+++ b/Shirkad-Trafigura.mw
@@ -2,7 +2,7 @@
 
 {{Flag|Holland}}
 
-[[File:Trafigura_logo.svg|thumb|right|500px|]]
+[[File:Trafigura_logo.svg|thumb|Right|500px]]
 
 
 waa shirkad ka ganacsata saliida bariga asia, oo ka ganacsata tamarta, xafiisyada waaweyn ee bariga asiya iyo Switzerland,
