I Added Some Little Info

--- a/Alla-amin_Pharmacy.mw
+++ b/Alla-amin_Pharmacy.mw
@@ -1,7 +1,7 @@
 Alla-Amin Pharmacy waa Shirkada Ugu Balaadhan ee Dawooyinka Keenta ee [[Bariga Afrika]] 
 
 == Ku saabsan ==
-{{Infobox company|logo=[[File:Image9871.png.png|center|thumb|Logo Of Alla Amin Pharmacy]]|company_type=Pharmaceutical|hq_location=Hargeisa,Somaliland|owner=Suleiman Hassan Obsiiye|website=allaaminpharma.com|num_locations=30 Xarumood|founder=Mr.Suleiman Hassan Obsiiye|num_employees=398|founded=1991 May 31|name=Alla-amin Pharmacy|income_year=$26,000,000}}
+{{Infobox company|logo=[[File:Image9871.png.png|center|thumb|Logo Of Alla Amin Pharmacy]]|hq_location=Hargeisa,Somaliland|owner=Suleiman Hassan Obsiiye|website=allaaminpharma.com|num_locations=37 Xarumood|founder=Mr.Suleiman Hassan Obsiiye|num_employees=417|founded=1991 May 31|name=Alla-amin Pharmacy|trading_name=Alla-Amin Pharmacy|parent=Alla-Amin Pharmaceutical import Company}}
 Farmasiiga Alla-Aamin waxaa markii ugu horreysay la aasaasay 1991 si uu u bixiyo adeegyo kala duwan oo farmasiga ah. Tan iyo markaas waxay noqdeen mid ka mid ah magacyada ugu kalsoonida badan ee daryeelka farmashiyaha bukaankuna wuxuu daacadnimo aad u weyn u leeyahay farmashiyeyaashayada. Waxaa ku faanaya lahaanshaha shirkada dawooyinka ee Alla-Aamin oo ay weheliso balanqaad aan leex leexad lahayn oo ku wajahan xirfada iyo daryeelka bukaanka.
 
 Waxaan ku faaneynaa inaan isku soo bandhigno inaan nahay mid ka mid ah shirkadaha sida xowliga ah ugu koraya Soomaaliya iyo Somaliland. Qeybteenna guud waxay ku saleysan tahay magaalada weyn ee dhaqaalaha iyo magaalada weyn ee Somaliland. Waxaan cadeyney doorkeena hogaamineed ee gobolka anagoo ah wax soo dejiye, wax qeybiye iyo tafaariiqle iyadoo laga furay 15 laamood oo waaweyn magaalooyinka Hargeysa, Buroa, Boorama, Wajaale,Gaalkayo,Djibouti,jigjiga,addisabaab Garowe iyo Muqdisho.
