*Empty MediaWiki Message*

--- a/Shirkad_SOMAGEC.mw
+++ b/Shirkad_SOMAGEC.mw
@@ -1,6 +1,6 @@
 '''Shirkad SOMAGEC'''
 
-{{Flag|Morrocco}}
+{{Flag|Morocco}}
 
 shirkad bixisa mashaariic xaddidan, shirkad magaceeda la yidhaa waxay ka dhisaysaa baadhitaanka saliidda waddanka jamuuriyada bari ee afrikada bari.
 
